# npcore

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
examples/: demo_interaction.py  demo_simple.py  demo_simulation.py  demo_visualization.py
notebooks/: demo_avanzado.ipynb  demo_basico.ipynb  tutorial_npcore.ipynb
src/npcore/: __init__.py  brain.py  environment.py  modules.py  npc.py  pathfinding.py  probability.py  story_engine.py  utility.py
tests/: test_environment.py  test_npc.py  test_probability.py
