[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npcore"
version = "0.1.0"
description = "A Python library for simple NPC simulation with probabilistic decision-making."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jose", email = "jgmalfavaun@gmail.com" }
]
license = { text = "MIT" }
keywords = ["npc", "simulation", "probability", "game-ai", "agents"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
