[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npcore"
version = "0.1.3"
description = "Librería en Python para simulación de NPCs con toma de decisiones, emociones, objetivos y aprendizaje."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Jose", email = "jgmalfavaun@gmail.com" }
]

license = { text = "MIT" }
dependencies = [
    "matplotlib>=3.7"
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]